footer at bottom of page, no longer covering content

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,7 +18,7 @@ html {
   box-sizing: border-box; }
 
 #root {
-  height: 100%;
+  min-height: 100%;
   position: relative; }
 
 html {
@@ -34,7 +34,9 @@ html {
 
 body {
   box-sizing: border-box;
-  background-color: #e9e9e9; }
+  background-color: #e9e9e9;
+  display: flex;
+  flex-direction: column; }
 
 body {
   font-family: 'Raleway', sans-serif; }
@@ -167,11 +169,10 @@ header {
     display: none !important; } }
 
 .footer {
-  height: 20rem;
+  height: 15rem;
   background: #4a919e;
-  position: absolute;
-  bottom: 0;
-  width: 100%; }
+  position: relative;
+  top: 100%; }
 
 .row {
   max-width: 114rem;
@@ -336,8 +337,13 @@ header {
   min-height: 100vh;
   overflow: hidden;
   display: block;
-  position: relative;
-  padding-bottom: 20rem; }
+  position: relative; }
+  @media only screen and (max-width: 960px) {
+    #content-wrap {
+      padding-bottom: calc(6rem + 19rem); } }
+  @media only screen and (max-width: 640px) {
+    #content-wrap {
+      padding-bottom: calc(6rem + 12rem); } }
 
 .section-about {
   height: 70rem;
@@ -444,10 +450,12 @@ header {
   padding: 8rem 0 25rem 0;
   font-size: 1.6rem;
   position: relative; }
+  @media only screen and (max-width: 960px) {
+    .section-projects {
+      padding-bottom: 140rem; } }
   @media only screen and (max-width: 640px) {
     .section-projects {
-      height: 2rem;
-      padding-bottom: 0; } }
+      height: 2rem; } }
 
 .project {
   margin: auto;
