--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -32,7 +32,7 @@ $default-box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 
 //MISC
 $navbar-height: 6rem;
-$footer-height: 20rem;
+$footer-height: 15rem;
 $skew-amount: 8deg;
 
 //RESPONSIVE BREAKPOINTS
