--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -8,7 +8,7 @@
 }
 
 #root {
-  height: 100%;
+  min-height: 100%;
   position: relative;
 }
 
@@ -31,7 +31,7 @@ html {
 body {
   box-sizing: border-box;
   background-color: $color-grey-light;
-  // display: flex;
-  // flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
