--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,7 +1,6 @@
 .footer {
   height: $footer-height;
   background: $color-blue-light;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+  position: relative;
+  top: 100%;
 }
